--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "docarray>=0.41.0",
     "ipykernel>=6.30.1",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
     "openai==0.28",
+    "pandas>=2.3.2",
     "python-dotenv>=1.1.1",
+    "tiktoken>=0.11.0",
 ]
