--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "ipykernel>=6.30.1",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
+    "langchain-google-genai>=2.1.10",
     "openai==0.28",
     "pandas>=2.3.2",
     "python-dotenv>=1.1.1",
