--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datetime>=5.5",
     "docarray>=0.41.0",
     "ipykernel>=6.30.1",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
+    "langchain-experimental>=0.3.4",
     "langchain-google-genai>=2.1.10",
+    "numexpr>=2.11.0",
     "openai==0.28",
     "pandas>=2.3.2",
     "python-dotenv>=1.1.1",
     "tiktoken>=0.11.0",
+    "wikipedia>=1.4.0",
 ]
